@@ -120,6 +120,8 @@
 
 * Supports AY Audio Chip, Turbosound (2 AY Channels), 3 AY Channels, MIDI channels, different DAC: Specdrum, Covox, ACB/ABC/BAC Stereo 
 
+* Supports General Sound 512
+
 * Supports SN76489AN Audio Chip
 
 * Real time playback from AY Chip sound to external MIDI device 
