@@ -222,3 +222,6 @@ squidgy falla pero a saber por que... parece que sobreescribe el archivo mazes y
 -help de verbose level decir que consola tambien sale en ventana
 
 
+-ventana Audio DAC los 4 canales. 4 waveforms?
+
+-gs_mix_dac_channels quiza que coja los ultimos 2-3 valores ultimos y haga media
